# Frankenstein-hub

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 20260401000000_initial_schema.sql
backend/src/: config.rs  error.rs  main.rs  routes.rs
backend/src/handlers/: analyst_handler.rs  creativist_handler.rs  critic_handler.rs  mod.rs
backend/src/middleware/: jwt_validator.rs
backend/src/models/: agent.rs  auth.rs
backend/src/services/: agent_executor.rs  ciba_orchestrator.rs  mod.rs  token_vault.rs
docs/: AUTH0_SETUP.md  DEPLOYMENT.md  PLANNING.md  PROGRESS.md  TASK.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/agents/[...path]/: route.ts
frontend/app/api/auth/[auth0]/: route.ts
frontend/app/api/connect/[provider]/: route.ts
frontend/app/api/connect/github/: route.ts
frontend/app/api/myaccount/: route.ts
frontend/app/dashboard/: error.tsx  loading.tsx  page.tsx
frontend/components/: ActivityLog.tsx  AgentCard.tsx  AuthFlowDiagram.tsx  ConsentManager.tsx  DashboardLog.tsx  Navigation.tsx  StepUpModal.tsx
frontend/lib/: apiClient.ts  auth0.ts
frontend/types/: agent.d.ts
infra/: frankenstein-api.service  frankenstein-web.service  nginx-app.gracestack.se.conf  setup-auth0.ps1
